--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
 
       </div>
     </section>
+    <!-- Certificates Section -->
+<section id="certificates" style="padding: 50px 20px; background-color: #111; color: white;">
+  <h2 style="text-align: center; color: #4ea1f3;">My Certificates</h2>
+
+  <div style="max-width: 800px; margin: auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+    <h3 style="color: #4ea1f3;">GIS, Mapping, and Spatial Analysis</h3>
+    <p><strong>Institution:</strong> University of Toronto (via Coursera)</p>
+    <p><strong>Date:</strong> December 21, 2024</p>
+    <p>This certificate was awarded upon successful completion of a specialization focused on GIS, mapping, spatial thinking, and geospatial analysis using ArcGIS and other tools.</p>
+    <img src="certificate1.jpg" alt="GIS Certificate" style="width: 100%; max-width: 500px; margin-top: 15px; border-radius: 8px;">
+  </div>
+</section>
 
     <footer>
       <p>© 2025 Mohaned Abdallh. All rights reserved.</p>
