--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
   </div>
 </section>
 
-<button onclick="document.getElementById('certificatesModal').style.display='block'" 
+<button onclick="document.getElementById('certificates.jpg').style.display='block'" 
         style="padding:10px 20px; background:#4ea1f3; color:white; border:none; border-radius:5px; cursor:pointer;">
   🎓 Show Certificates
 </button>
  
-<div id="certificatesModal" style="display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
+<div id="certificates.jpgl" style="display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
   <div style="background-color:#111; margin:10% auto; padding:20px; border-radius:10px; width:90%; max-width:600px; color:white; position:relative;">
     
   
-    <span onclick="document.getElementById('certificatesModal').style.display='none'" 
+    <span onclick="document.getElementById('certificates.jpgl').style.display='none'" 
           style="position:absolute; top:10px; right:20px; color:#ccc; font-size:24px; cursor:pointer;">&times;</span>
     
    
