--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p><strong>Institution:</strong> University of Toronto (via Coursera)</p>
     <p><strong>Date:</strong> December 21, 2024</p>
     <p>This certificate was awarded upon successful completion of a specialization focused on GIS, mapping, spatial thinking, and geospatial analysis using ArcGIS and other tools.</p>
-    <img src="certificate1.jpg" alt="certificates.jpg" style="width: 100%; max-width: 500px; margin-top: 15px; border-radius: 8px;">
+    <img src="certificates.jpg" alt="certificates.jpg" style="width: 100%; max-width: 500px; margin-top: 15px; border-radius: 8px;">
   </div>
 </section>
    
