--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </section>
     
-<section id="certificatesModal" style="padding: 50px 20px; background-color: #111; color: white;">
+<section id="certificates" style="padding: 50px 20px; background-color: #111; color: white;">
   <h2 style="text-align: center; color: #4ea1f3;">My Certificates</h2>
 
   <div style="max-width: 800px; margin: auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
