--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     
 <section id="certificates" style="padding: 50px 20px; background-color: #111; color: white;">
   <h2 style="text-align: center; color: #4ea1f3;">My Certificates</h2>
+ <!-- صورة الشهادة الثانية -->
+  <img src="certificate2.jpg" alt="Certificate 2" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
 
+  <!-- صورة الشهادة الثالثة -->
+  <img src="certificate3.jpg" alt="Certificate 3" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
+</div>
   <div style="max-width: 800px; margin: auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
     <h3 style="color: #4ea1f3;">GIS, Mapping, and Spatial Analysis</h3>
     <p><strong>Institution:</strong> University of Toronto (via Coursera)</p>
