--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
 </button>
 <div id="certificates.jpgl" style="display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
   <div style="background-color:#111; margin:10% auto; padding:20px; border-radius:10px; width:90%; max-width:600px; color:white; position:relative;">
-    
+    <!-- الصورة الثانية (جديدة) -->
+  <img src="certificate2.jpg" alt="Certificate 2" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
+
+  <!-- الصورة الثالثة (جديدة) -->
+  <img src="certificate3.jpg" alt="Certificate 3" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
   
     <span onclick="document.getElementById('certificates.jpgl').style.display='none'" 
           style="position:absolute; top:10px; right:20px; color:#ccc; font-size:34px; cursor:pointer;">&times;</span>
