--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         style="padding:20px 40px; background:#007bff; color:white; border:none; border-radius:5px; cursor:pointer; margin-top:10px;">
   📄 View My CV
 </button>
-<div id="certificates.jpg" style="display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
+<div id="certificatesModal" style="display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
   <div style="background-color:#111; margin:10% auto; padding:20px; border-radius:10px; width:90%; max-width:600px; color:white; position:relative;">
   <img src="certificates2.jpg" alt="Certificate 2" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
   <img src="certificates3.jpg" alt="Certificate 3" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
