--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div style="background-color:#111; margin:10% auto; padding:20px; border-radius:10px; width:90%; max-width:600px; color:white; position:relative;">
   <img src="certificates2.jpg" alt="Certificate 2" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
   <img src="certificates3.jpg" alt="Certificate 3" style="width:90%; max-width:600px; margin:10px 0; border-radius:8px;">
-    <span onclick="document.getElementById('certificates.jpgl').style.display='none'" 
+    <span onclickModal()="document.getElementById('certificates.jpgl').style.display='none'" 
           style="position:absolute; top:10px; right:20px; color:#ccc; font-size:34px; cursor:pointer;">&times;</span>
     <h2 style="color:#4ea1f3;">My Certificates</h2>
     <h3>GIS, Mapping, and Spatial Analysis</h3>
