--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Mohaned Abdallh Musa</h1>
       <p>GIS Specialist | Surveying Engineer | Riyadh, Saudi Arabia</p>
       <p><strong>Email:</strong> mohnedabdllh@gmail.com | <strong>Phone:</strong> +966569849279</p>
-      <p><a href="http://www.linkedin.com/in/mohaned-abdallh" target="_blank">LinkedIn Profile</a></p>
+      <p><a href="https://www.linkedin.com/in/mohaned-abdallh-6a75941ab" target="_blank">LinkedIn Profile</a></p>
     </header>
 
     <section class="projects">
