--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 
 <button onclick="document.getElementById('certificatesModal').style.display='block'" 
-        style="padding:20px 40px; background:#4ea1f3; color:white; border:none; border-radius:5px; cursor:pointer;">
+        style="padding:20px 40px; background:#4ea1f3; color:white; border:none; border-radius:5px; cursor:pointer; margin-top:10px;">
   🎓 Show Certificates
 </button>
 
