--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   🎓 Show Certificates
 </button>
 
-<button onclick="document.getElementById('cvModal').style.display='block'" 
+<button onclick="document.getElementById('certificatesModal').style.display='block'" 
         style="padding:20px 40px; background:#007bff; color:white; border:none; border-radius:5px; cursor:pointer; margin-top:10px;">
   📄 
 </button>
