--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
   </div>
 </div>
 
-<button onclick="document.getElementById('certificatesModal').style.display='block'" 
+<button onclick="document.getElementById('certificatesModal').style.display='none'" 
         style="padding:20px 40px; background:#4ea1f3; color:white; border:none; border-radius:5px; cursor:pointer; margin-top:10px;">
   🎓 Show Certificates
 </button>
 
 <button onclick="document.getElementById('certificatesModal').style.display='block'" 
         style="padding:20px 40px; background:#007bff; color:white; border:none; border-radius:5px; cursor:pointer; margin-top:10px;">
-  📄 
+  📄  View My CV
 </button>
 <div id="certificatesModal" style="display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8);">
   <div style="background-color:#111; margin:10% auto; padding:20px; border-radius:10px; width:90%; max-width:600px; color:white; position:relative;">
